force-app/main/default/objects/Workshop_Step_Detail__c/Workshop_Step_Detail__c.object-meta.xml
<CustomObject>
    <label>Workshop Step Detail</label>
    <nameField>
        <displayFormat>WSD-{0000000}</displayFormat>
        <label>Workshop Step Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workshop Step Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>