force-app/main/default/objects/Workshop_Step_Detail__c/fields/Detail_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Detail_Instructions__c</fullName>
    <label>Detail Instructions</label>
    <length>32768</length>
    <type>Html</type>
    <readable>true</readable>
    <editable>true</editable>
</CustomField>