force-app/main/default/objects/Workshop_Step_Detail__c/fields/Detail_Order__c.field-meta.xml
<CustomField>
    <fullName>Detail_Order__c</fullName>
    <label>Detail Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>