force-app/main/default/objects/Workshop_Step_Detail__c/fields/Detail_Title__c.field-meta.xml
<CustomField>
    <fullName>Detail_Title__c</fullName>
    <label>Detail Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>