force-app/main/default/objects/Workshop_Step_Detail__c/fields/Workshop_Step__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Step__c</fullName>
    <label>Workshop Step</label>
    <referenceTo>Workshop_Step__c</referenceTo>
    <relationshipLabel>Workshop Step Details</relationshipLabel>
    <relationshipName>Workshop_Step_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>