force-app/main/default/objects/Workshop_Step_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Workshop_Step__c</columns>
    <columns>Detail_Order__c</columns>
    <columns>Detail_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>